--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -708,14 +708,14 @@ form:
     time: "Time"
     ci: "CI"
   help:
-    custom-code-default: "컴포넌트에 표시되는 기본값을 설정할 수 있습니다.<br/>'None'을 선택하는 경우 기본 값은 출력되지 않습니다.<br/>'Session'을 선택하는 경우 사용자의 세션 정보가 기본 값으로 출력됩니다.<br/>'Custom Code Data'로 선택하는 경우에는 사용자가 정의한 코드의 데이터를 기본 값으로 출력합니다."
+    custom-code-default: "컴포넌트에 표시되는 기본값을 설정할 수 있습니다.<br/>'없음'을 선택하는 경우 기본 값은 출력되지 않습니다.<br/>'세션'을 선택하는 경우 사용자의 세션 정보가 기본 값으로 출력됩니다.<br/>'코드'로 선택하는 경우에는 사용자가 정의한 코드의 데이터를 기본 값으로 출력합니다."
     custom-code: "사용자가 정의한 코드셋의 커스텀 코드 목록을 선택할 수 있습니다. 자세한 설정은 업무흐름 관리 > 커스텀 코드 화면을 참조바랍니다."
-    date-default: "컴포넌트에 표시되는 기본값을 설정할 수 있습니다.<br/>'None'을 선택하는 경우 기본 값은 출력되지 않습니다.<br/>'Now'로 선택하는 경우 해당 신청서 작성 시점의 날짜가 기본 값으로 출력됩니다.<br/>'days after'로 선택하고 숫자로 된 값을 넣으면 문서를 작성하는 시점을 기준으로 해당 숫자만큼 이후의 날짜가 기본 값으로 사용됩니다. 마이너스 값을 입력하는 경우 이전 날짜를 지정할 수 있습니다.<br/>마지막 항목은 특정 날짜를 고정으로 표시할 경우 사용하시면 됩니다."
-    datetime-default: "컴포넌트에 표시되는 기본값을 설정할 수 있습니다.<br/>'None'을 선택하는 경우 기본 값은 출력되지 않습니다.<br/>'Now'로 선택하는 경우 해당 신청서 작성 시점의 날짜시간이 기본 값으로 출력됩니다.<br/>'days/hours later'로 선택하고 숫자로 된 값을 넣으면 문서를 작성하는 시점을 기준으로 해당 숫자만큼 이후의 날짜시간이 기본 값으로 사용됩니다. 마이너스 값을 입력하는 경우 이전 날짜시간을 지정할 수 있습니다.<br/>마지막 항목은 특정 날짜시간을 고정으로 표시할 경우 사용하시면 됩니다."
+    date-default: "컴포넌트에 표시되는 기본값을 설정할 수 있습니다.<br/>'없음'을 선택하는 경우 기본 값은 출력되지 않습니다.<br/>'현재'로 선택하는 경우 해당 신청서 작성 시점의 날짜가 기본 값으로 출력됩니다.<br/>'일 후'로 선택하고 숫자로 된 값을 넣으면 문서를 작성하는 시점을 기준으로 해당 숫자만큼 이후의 날짜가 기본 값으로 사용됩니다. 마이너스 값을 입력하는 경우 이전 날짜를 지정할 수 있습니다.<br/>마지막 항목은 특정 날짜를 고정으로 표시할 경우 사용하시면 됩니다."
+    datetime-default: "컴포넌트에 표시되는 기본값을 설정할 수 있습니다.<br/>'없음'을 선택하는 경우 기본 값은 출력되지 않습니다.<br/>'현재'로 선택하는 경우 해당 신청서 작성 시점의 날짜시간이 기본 값으로 출력됩니다.<br/>'일/시간 후'로 선택하고 숫자로 된 값을 넣으면 문서를 작성하는 시점을 기준으로 해당 숫자만큼 이후의 날짜시간이 기본 값으로 사용됩니다. 마이너스 값을 입력하는 경우 이전 날짜시간을 지정할 수 있습니다.<br/>마지막 항목은 특정 날짜시간을 고정으로 표시할 경우 사용하시면 됩니다."
     is-topic: "처리할 문서 목록에서 해당 컴포넌트를 표시하고 싶은 경우 체크합니다."
     mapping-id: "외부 출력을 위한 속성이 아니며, 워크플로우 엔진이나 다른 모듈에서 해당 컴포넌트의 값을 이용하기 위해 설정하는 키값입니다."
     text-default: "컴포넌트에 표시되는 기본값을 직접입력하거나, 자동입력 중 선택할 수 있습니다. 자동입력일 경우 사용자의 세션 정보 중 하나를 선택할 수 있습니다."
-    time-default: "컴포넌트에 표시되는 기본값을 설정할 수 있습니다.<br/>'None'을 선택하는 경우 기본 값은 출력되지 않습니다.<br/>'Now'로 선택하는 경우 해당 신청서 작성 시점의 시간이 기본 값으로 출력됩니다.<br/>'hours later'로 선택하고 숫자로 된 값을 넣으면 문서를 작성하는 시점을 기준으로 해당 숫자만큼 이후의 시간이 기본 값으로 사용됩니다. 마이너스 값을 입력하는 경우 이전 시간을 지정할 수 있습니다.<br/>마지막 항목은 특정 시간을 고정으로 표시할 경우 사용하시면 됩니다."
+    time-default: "컴포넌트에 표시되는 기본값을 설정할 수 있습니다.<br/>'없음'을 선택하는 경우 기본 값은 출력되지 않습니다.<br/>'현재'로 선택하는 경우 해당 신청서 작성 시점의 시간이 기본 값으로 출력됩니다.<br/>'시간 후'로 선택하고 숫자로 된 값을 넣으면 문서를 작성하는 시점을 기준으로 해당 숫자만큼 이후의 시간이 기본 값으로 사용됩니다. 마이너스 값을 입력하는 경우 이전 시간을 지정할 수 있습니다.<br/>마지막 항목은 특정 시간을 고정으로 표시할 경우 사용하시면 됩니다."
   properties:
     align:
       vertical: "Vertical"
