--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -121,6 +121,9 @@ spring:
   datasource:
     #url: jdbc:log4jdbc:postgresql://10.0.10.175:32783/itsm
     url: jdbc:log4jdbc:postgresql://10.0.10.175:32784/itsm
+  jpa:
+    show-sql: false
+    properties.hibernate.format_sql: false
 ---
 spring:
   profiles: lizeelf
