--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -7,6 +7,7 @@ common:
     close: "닫기"
     delete: "삭제"
     editUserInfo: "내 정보 수정"
+    export: "내보내기"
     list: "목록"
     logout: "로그아웃"
     modify: "수정 완료"
