#11485 [사용자 정의차트] 제목 변경 및 검색어 추가 -> 상단 제목 수정

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -241,7 +241,7 @@ board:
 chart:
   label:
     all: "All"
-    chartList: "User Custom Chart List"
+    chartt: "User Custom Chart"
     defaultInfo: "Default Info"
     description: "Chart Description"
     edit: "Chart Edit"
