#11485 [사용자 정의차트] 제목 변경 및 검색어 추가 -> 상단 제목 수정

--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -241,7 +241,7 @@ board:
 chart:
   label:
     all: "전체"
-    chart: "사용자 정의 차트 목록"
+    chart: "사용자 정의 차트"
     defaultInfo: "기본 정보"
     description: "차트 설명"
     edit: "차트 편집"
