#11485 [사용자 정의차트] 제목 변경 및 검색어 추가 -> 검색 기능 추가

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -258,6 +258,7 @@ chart:
     doc: "Document"
     docCases: "Documents Cases"
     docRatio: "Documents Ratio"
+    searchPlaceholder: "Chart Name"
   option:
     label:
       subTitle: "User custom chart report"
