--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -258,6 +258,7 @@ chart:
     doc: "문서"
     docCases: "문서 건 수"
     docRatio: "문서 차지 비율"
+    searchPlaceholder: "차트 이름"
   option:
     label:
       subTitle: "사용자 정의 차트 보고서"
