--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -688,6 +688,8 @@ form:
     selectImportFile: "Please select an import file."
     unique: "Duplicate data cannot be included."
     duplicateFormName: "Duplicate form name! Please enter other form name."
+    duplicateOptionsName: "Duplicate options name!"
+    duplicateOptionsValue: "Duplicate options value!"
   form: "Form"
   group: "Group"
   row: "Row"
