#11318 - [업무흐름] 업무흐름 등록시 업무흐름명 중복체크를 안한다.
* 업무흐름쪽에 추가 및 수정을 할 때, name의 값이 중복으로 저장되는 현상이 있었다.
 - 해당 코드 및 다른 비슷한 코드 분석 결과, 통일성이 없어서 해맸다.

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -570,6 +570,7 @@ document:
     launchedInstance: "There is an instance started and cannot be deleted."
     lengthMax: "Please enter less than {0} characters."
     lengthMin: "Please enter at least {0} characters."
+    nameDuplication: "the duplication name document. check document."
     process: "It has been processed."
     requiredFileupload: "Please upload a file."
     searchDescription: "Inquire and apply for a document"
