#11536 스케줄러 plugins 경로 변경 1. plugins 폴더를 applicaton.yml 설정 파일로 변경 (외부 경로에 위치 가능) 2. 즉시 실행시 해당 경로에 class, jar 파일이 없을 경우에도 정상 처리로 출력되는 현상 수정 (체크 추가)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -90,6 +90,9 @@ file.upload.dir: D:\\files
 # Extend Image URL Path
 file.image.uri: /fileImages
 
+# schedule plugins directory
+schedule.plugins.dir: C:\\plugins
+
 # IP 접근 제한 기능 설정
 ip.access.control: true
 
