--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -122,7 +122,8 @@ file.upload.dir: /root/files
 spring:
   profiles: hcjung
   datasource:
-    url: jdbc:log4jdbc:postgresql://10.0.10.175:32783/itsm
+    #url: jdbc:log4jdbc:postgresql://10.0.10.175:32783/itsm
+    url: jdbc:log4jdbc:postgresql://10.0.10.175:32786/itsm
   jpa:
     show-sql: false
     properties.hibernate.format_sql: false
