함수명 오타 수정

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -71,7 +71,7 @@ common:
     minValue: "Minimum input is {0}"
     modify: "Modified."
     noData: "There is no data."
-    onlySaveInEdit: "It cannot be saved in the publish/edit. Please edit in the edit"
+    onlySaveInEdit: "It cannot be saved in the publish/edit."
     processedOrDelete: "Already processed or deleted."
     register: "Registered."
     required: "Please enter {0}."
