--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -128,6 +128,11 @@ spring:
     properties.hibernate.format_sql: false
 ---
 spring:
+  profiles: scriptTest
+  datasource:
+    url: jdbc:log4jdbc:postgresql://10.0.10.175:32795/itsm
+---
+spring:
   profiles: lizeelf
   datasource:
     url: jdbc:log4jdbc:postgresql://10.0.10.175:32787/itsm
