#11509 [사용자 정의차트] 연산방법 추가 -> 오류 수정

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -267,8 +267,12 @@ chart:
       yAxisAverageTitle: "Average"
     text:
       count: "Count"
+      average: "Average"
+      percent: "Percent"
     value:
       count: "count"
+      average: "average"
+      percent: "percent"
   msg:
     searchDescription: "View and manage various user custom charts."
     enterChartName: "Please enter a chart name."
