--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -268,9 +268,11 @@ chart:
     text:
       count: "카운트"
       average: "평균"
+      percent: "퍼센트"
     value:
       count: "count"
       average: "average"
+      percent: "percent"
   msg:
     searchDescription: "다양한 사용자 정의 차트를 조회하고 관리합니다."
     enterChartName: "차트 이름을 입력하세요."
