#11467 함수명 수정 (isPhone -> isPhoneNumber)

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -1381,7 +1381,7 @@ validation:
     required: "Please enter {0}."
     specialChar: "Please enter only special characters."
     unacceptableCharacters: "Contains special characters (/ \ % ;) that are not allowed."
-    checkPhoneFormat: "Please include (-) according to the phone number format."
+    checkPhoneNumberFormat: "Please include (-) according to the phone number format."
 
 # Project
 project:
