#11704 스케줄러 실행시간 설정 기능 추가 -> 일감 분석 및 수정 진행

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -93,6 +93,9 @@ file.image.uri: /fileImages
 # schedule plugins directory
 schedule.plugins.dir: C:\\plugins
 
+# Schedule timezone
+schedule.plugins.timezone: Asia/Seoul
+
 # IP 접근 제한 기능 설정
 ip.access.control: true
 
