#11709 [사용자 정의 차트 리팩토링] Activity Gauge Chart 구현

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -286,7 +286,7 @@ chart:
     stackedColumn: "Stacked Column Chart"
     stackedBar: "Stacked Bar Chart"
     lineAndColumn: "Line And Column Chart"
-    activityGauge: "Activity Gauge Chart"
+    gauge: "Gauge Chart"
 
 # CMDB
 cmdb:
