#11390 비밀번호/아이디 찾기 숨김 처리

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -108,6 +108,12 @@ password.expired.period: 90
 # 로그인 플랫폼 사용여부
 login.platform.enabled: false
 
+# 아이디 찾기 사용여부
+find.id.enabled: false
+
+# 비밀번호 찾기 사용여부
+find.password.enabled: false
+
 jasypt.encryptor.bean: jasyptStringEncryptor
 
 ---
