--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -1398,7 +1398,7 @@ validation:
     required: "Please enter {0}."
     specialChar: "Please enter only special characters."
     unacceptableCharacters: "Contains special characters (/ \ % ;) that are not allowed."
-    checkPhoneNumberFormat: "Please include (-) according to the phone number format."
+    checkPhoneNumberFormat: "Please Extension format (4 digits) or<br>include (-) according to the phone number format."
 
 # Project
 project:
