#11699 단순문의 신청서에 전화번호 유효성 체크를 하지 못한다.(성민 차장님 피드백 반영)

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -1398,7 +1398,8 @@ validation:
     required: "Please enter {0}."
     specialChar: "Please enter only special characters."
     unacceptableCharacters: "Contains special characters (/ \ % ;) that are not allowed."
-    checkPhoneNumberFormat: "Please Extension format (4 digits) or<br>include (-) according to the phone number format."
+    checkPhoneNumberFormat: "Please include (-) according to the phone number format."
+    checkPhoneNumberOrExtentionNumberFormat: "Please Extension format (4 digits) or<br>include (-) according to the phone number format."
 
 # Project
 project:
