#11488 [보고서 템플릿] 생성버튼 알림 메시지가 필요하다.

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -1140,6 +1140,8 @@ report:
     templateRegister: "Template Register"
   msg:
     configDescription: "Set up templates using custom charts."
+    createFail: "Failed to generate report"
+    createSucess: "Report has been generated."
     duplicateChart: "Duplicate chart exists."
     editDescription: "Register, modify, or delete templates."
     emptyChart: "Chart does not exist."
