모형난 프로필_스케쥴 파일 위치 변경 / 메세지 문구 추가 및 변경

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -72,6 +72,7 @@ common:
     modify: "Modified."
     noData: "There is no data."
     onlySaveInEdit: "It cannot be saved in the publish/edit."
+    process: "Processed"
     processedOrDelete: "Already processed or deleted."
     register: "Registered."
     required: "Please enter {0}."
