--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -156,6 +156,7 @@ spring:
   datasource:
     url: jdbc:log4jdbc:postgresql://10.0.10.175:32846/itsm
 file.upload.dir: C:\files
+schedule.plugins.dir: C:\git\plugins
 ---
 spring:
   profiles: wdj
