#11502 엑셀 다운로드 기능 확장 -> 일감 분석 및 수정 진행 (문서함)

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -1268,6 +1268,16 @@ token:
     cancel: "cancel"
     terminate: "terminate"
     finish: "finish"
+  excel:
+    docNo: "Document No"
+    name: "Document Name"
+    desc: "Document Desc"
+    status: "Document Status"
+    type: "Document Type"
+    createDt: "Document Create Date"
+    endDt: "Document End Data"
+    createUser: "Document Create User"
+    application-form: "application Form"
 
 # WorkflowAdmin
 workflowAdmin:
