스케줄러 실행 테스트

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -150,6 +150,7 @@ spring:
   profiles: jhpark
   datasource:
     url: jdbc:log4jdbc:postgresql://10.0.10.175:32847/itsm
+schedule.plugins.dir: D:\Joohyun\Project\itsm\plugins
 ---
 spring:
   profiles: mo
