--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -297,7 +297,7 @@ cmdb:
       details: "Details"
       export: "Export"
       label: "Label"
-      management: "Attribute Management"
+      management: "CI Attribute"
       mappingId: "Mapping ID"
       name: "Attribute Name"
       option:
@@ -383,7 +383,7 @@ cmdb:
     label:
       attributeList: "Attribute List"
       description: "Description"
-      management: "Class Management"
+      management: "CI Class"
       name: "Name"
       pClassName: "Parent Class"
       searchPlaceholder: "Class Name / Description"
@@ -404,7 +404,7 @@ cmdb:
       class: "Class"
       description: "Description"
       icon: "Icon"
-      management: "Type Management"
+      management: "CI Type"
       name: "Type Name"
       parentType: "Parent Type"
       searchPlaceholder: "Type"
