메세지 문구 처리 -> 실행 으로 변경

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -64,6 +64,7 @@ common:
     dataSelect: "Please select {0}."
     delete: "Deleted."
     deleteTartget: "Please select target."
+    done: "Executed"
     emptyValue: "There is an empty value"
     enterContents: "Please enter contents"
     enterTitle: "Please enter a title."
@@ -72,7 +73,6 @@ common:
     modify: "Modified."
     noData: "There is no data."
     onlySaveInEdit: "It cannot be saved in the publish/edit."
-    process: "Processed"
     processedOrDelete: "Already processed or deleted."
     register: "Registered."
     required: "Please enter {0}."
