--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -64,6 +64,7 @@ common:
     dataSelect: "{0} 을(를) 선택하세요."
     delete: "삭제되었습니다."
     deleteTartget: "삭제 대상을 선택하세요."
+    process: "실행되었습니다."
     emptyValue: "빈 값이 있습니다."
     enterContents: "내용을 입력하세요."
     enterTitle: "제목을 입력하세요."
@@ -72,7 +73,6 @@ common:
     modify: "수정되었습니다."
     noData: "데이터가 없습니다."
     onlySaveInEdit: "발행/사용 단계에서는 수정이 불가합니다."
-    process: "처리되었습니다."
     processedOrDelete: "이미 처리되었거나 삭제되었습니다."
     register: "등록되었습니다."
     required: "{0} 을(를) 입력하세요."
