#11642 코드 메뉴에서 조회 시 코드 이름도 추가 되었으면 좋겠다.

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -434,7 +434,7 @@ code:
     codeLang: "Multilingual Code"
     name: "Code Name"
     pCode: "Parent Code"
-    searchPlaceholder: "Code"
+    searchPlaceholder: "Code/ Code name"
     seqNum: "The order of the output"
     useYn: "Use enable"
   msg:
