#11843 [포탈] 자료실 목록이 ITSM 자료실 목록과 화면이 다르다. #11844 [포탈] 전체조회 화면에서 글이 10개이면 스크롤 동작이 이상하다

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -984,6 +984,7 @@ notice:
     enterToDt: "Please enter a search end date."
     enterTopNoticeEndDt: "Please enter a top notice end date."
     enterTopNoticeStrtDt: "Please enter a top notice start date."
+    maximunTopNoticeCount: "The maximum number at the top is 10."
     portalDescription: "View notice's information."
     searchDescrition: "View and manage notice's information."
     viewDescription: "Inquire detailed information about the notice."
