#11429 [상세문서] 처리이력 업무이름 넓이 조정

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -1252,6 +1252,7 @@ token:
     relatedInstancePlaceholder: "Document Name / Create User"
     searchPlaceholder: "Document No / Create User / Contents"
     startDt: "Start Date"
+    status: "Status"
     tagPlaceHolder: "#Tags"
     view: "Document View"
     write: "My Document"
