#11930 - [로그인] "계정 만들기" 숨기자
* application.yml 에 사용 할 값 추가하여 "계정 만들기" 숨김

* 오타 수정 (isLoginPlatform)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -108,6 +108,9 @@ password.expired.period: 90
 # 로그인 플랫폼 사용여부
 login.platform.enabled: false
 
+# 사용자 계정만들기 사용여부
+create.account.enabled: false
+
 # 아이디 찾기 사용여부
 find.id.enabled: false
 
