--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -353,7 +353,7 @@ cmdb:
       seqNum: "CI No"
       status:
         delete: "delete"
-        tyoe: "status"
+        type: "status"
         use: "use"
       tag: "Tag"
       tagPlaceholder: "#Tag"
