--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -362,7 +362,6 @@ cmdb:
       update: "CI Update"
       view: "CI View"
       relation: "CI Relation"
-      relationType: "Relation Type"
       targetCiName: "Target CI Name"
       whetherToInterlock: "Whether to Interlink"
       interlock: "Interlink"
@@ -371,7 +370,7 @@ cmdb:
       deleteEditableCI: "Do you want to delete the entered asset information from the list?"
       deleteReadableCI: "Do you want to delete asset information from the list?"
       deleteInformation: "All asset information being created will be deleted."
-      duplicateRelatedCIData: "The same relation and target CI exist."
+      duplicateRelatedCIData: "The same relation CI exist."
       enterCiName: "Please enter a CI Name."
       searchDescription: "Add, view and manage CMDB CI."
       selectCI: "Please select a CI."
