#11899 - [스케줄러] 경로에 특수문자[*]를 넣으면 오류가 발생된다.
중간 커밋

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -1214,6 +1214,7 @@ scheduler:
     cronError: "Enter the correct Cron expression."
     jarNotExist: "JAR file does not exist."
     classNotExist: "ClASS file does not exist."
+    unacceptableCharacters: "contains special characters(: ? * \" < > |) that are not allowed."
   status:
     true: "Use"
     false: "UnUsed"
