#11884 - faq 조회 순서 및 문구 변경

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -28,6 +28,7 @@ common:
     blank: " "
     bracketOpen: "["
     bracketClose: "]"
+    categoryAsc: "Order by category"
     comment: "Comment"
     contents: "Contents"
     colon: ":"
