--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -1048,6 +1048,7 @@ process:
     startElementMustOne: '시작 이벤트는 반드시 1개이어야만 합니다.'
     searchDescription: "프로세스를 조회 및 관리합니다."
     selectImportFile: "IMPORT 파일을 선택하세요."
+    uncheckWithdraw: "첫번째 엘리먼트일 경우 회수기능을 설정<br>할 수 없습니다.<br>'{0}' 엘리먼트의 회수 가능여부의 체크박스를 해제해주세요."
   title:
     preview: "Zenius ITSM : 프로세스 미리보기"
     processMap: "Zenius ITMS : 프로세스 맵"
