#11917 #11890 엑셀 다운로드 관련 오류 해결

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -1284,6 +1284,7 @@ token:
     endDt: "Document End Data"
     createUser: "Document Create User"
     application-form: "application Form"
+    workflow: "Workflow"
 
 # WorkflowAdmin
 workflowAdmin:
